--- a/modpack/data/processed/manifest.json
+++ b/modpack/data/processed/manifest.json
@@ -1,28 +1,28 @@
 {
   "minecraft": {
-    "version": "\"1.20.1\"",
+    "version": "1.20.1",
     "modLoaders": [
       {
-        "id": "\"forge\"",
+        "id": "forge",
         "primary": true
       }
     ]
   },
   "files": [
     {
-      "projectID": 238222,
-      "fileID": 4632296,
+      "projectID": 263420,
+      "fileID": 6778028,
       "required": true
     },
     {
-      "projectID": 306612,
-      "fileID": 4635570,
+      "projectID": 513688,
+      "fileID": 5512076,
       "required": true
     }
   ],
   "manifestType": "minecraftModpack",
   "manifestVersion": 1,
-  "name": "Modpack \"1.20.1\"-\"forge\"",
+  "name": "Modpack 1.20.1-forge",
   "version": "0.1.0",
   "author": "diego",
   "overrides": "overrides"
